--- a/examples/ecommerce-analytics/composer.json
+++ b/examples/ecommerce-analytics/composer.json
@@ -5,12 +5,20 @@
     "require": {
         "php": "^8.3",
         "laravel/framework": "^11.0",
-        "laraduck/eloquent-duckdb": "@dev"
+        "laraduck/eloquent-duckdb": "@dev",
+        "inertiajs/inertia-laravel": "^2.0"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
         }
+    },
+    "scripts": {
+        "dev": [
+            "Composer\\Config::disableProcessTimeout",
+            "@php artisan serve --host=localhost --port=8000 & npm run dev"
+        ],
+        "dev:stop": "pkill -f 'php artisan serve' && pkill -f 'vite'"
     },
     "repositories": [
         {
