--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
     with:
       visibility: public
       fail-fast: true
+    env:
+      - NIXPKGS_ALLOW_UNSUPPORTED_SYSTEM: 1
   build-pages:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
